--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <script src="./js/smooth-scroll.min.js"></script>
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Clientes</a>
-            <a href="#">Servicios</a>
+            <a  href="#">Inicio</a>
+            <a data-scroll href="#nosotros" href="#">Acerca de</a>
+            <a data-scroll href="#clientes" href="#">Clientes</a>
+            <a data-scroll href="#servicios">Servicios</a>
             <a href="#">Contacto</a>
         </nav>
         <section class="textos-header">
@@ -26,7 +27,7 @@
         </div>
     </header>
     <main>
-        <section class="contenedor sobre-sobre-nosotros">
+        <section id="nosotros" class="contenedor sobre-sobre-nosotros">
             <h2 class="titulo"> Nuestras Instalaciónes </h2>
             <div class="contenedor-sobre-nosotros">
                 <img src="./img/pet-shop.jpg" alt="" class="imagen-sobre-nosotros">
@@ -42,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section class="clientes">
+        <section id="clientes" class="clientes">
             <div class="contenedor">
                 <h2 class="titulo">Nuestros Clientes</h2>
                 <div class="galeria-port">
@@ -106,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <section class="comentarios contenedor">
+        <section id="comentarios" class="comentarios contenedor">
             <h2 class="titulo">Que dicen las mascotas de nunestros clientes</h2>
             <div class="cards">
                 <div class="card">
@@ -125,7 +126,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-services">
+        <section id="servicios" class="about-services">
             <div class="contenedor">
                 <h2 class="titulo">Nuestros Servicios</h2>
                 <div class="servicio-cont">
@@ -167,5 +168,11 @@
             ~ | Armando Ruiz | ~
         </div>
     </footer>
+
+    <!-- /* scripts */ -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+        var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
 </body>
 </html>
